syntax = "proto3";

package chatservice;

service ChatService {
    rpc CreateAccount(CreateAccountMessage) returns (CreateAccountReply);
    rpc Login(LoginMessage) returns (LoginReply);
    rpc Logout(LogoutMessage) returns (LogoutReply);
    rpc ListUsers(QueryUsersMessage) returns (stream User);
    rpc SendMessage(ChatMessage) returns (SendMessageReply);
    rpc QueryNotifications(QueryNotificationsMessage) returns (stream Notification);
    rpc QueryMessages(QueryMessagesMessage) returns (stream ChatMessage);
    rpc DeleteAccount(DeleteAccountMessage) returns (DeleteAccountReply);
    rpc RefreshClient(RefreshRequest) returns (RefreshResponse);

    // May not need this anymore?
    rpc MessagesSeen(MessagesSeenMessage) returns (MessagesSeenReply);
}


message CreateAccountMessage {
    string username=1;
    string password=2;
}


message CreateAccountReply {
    bool createAccountSuccess=1;
    optional string errorMsg=2;
}


message LoginMessage {
    string username=1;
    string password=2;
}


message LoginReply {
    bool loginSuccess=1;
    optional string errorMsg=2;
}


message LogoutMessage {
    string username=1;
}


message LogoutReply {
    // bool loggedOut=1;
    optional string errorMsg=2;
}


message QueryUsersMessage {
    optional string username=1;
}


message User {
    string username=1;
}


message SendMessageReply {
    bool messageSent=1;
    optional string errorMsg=2;
}


message QueryNotificationsMessage {
    // bool queryingNotifications=1;
    string user=1;
}


message Notification {
    string user=1;
    int32 numberOfNotifications=2;
}


message QueryMessagesMessage {
    string clientUsername=1;
    string otherUsername=2;
}


message ChatMessage {
    string senderUsername=1;
    string recipientUsername=2;
    string msgContent=3;
}


message DeleteAccountMessage {
    string username=1;
    string password=2;
}


message DeleteAccountReply {
    bool deletedAccount=1;
    optional string errorMsg=2;
}


message MessagesSeenMessage {
    string clientUsername=1;
    string otherUsername=2;
    int32 messagesSeen=3;
}

message MessagesSeenReply {
}

message RefreshRequest {
    string clientusername=1;
}

message RefreshResponse {
    bool forceLogout=1;
    repeated Notification notifications=2;
}